--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -62,21 +62,47 @@ df$date = as.Date(df$date, dateFormat)
 ```
 
 ## What is mean total number of steps taken per day?
-A histogram with 20 breaks reveals that this is a bimodal distribution. The data 
-contains a disproportionate number of 
-```{r}
+### Visualising frequency of total daily steps
+A histogram is plotted to give us an idea of how the frequencies for different 
+number of steps are distributed. 
+```{r message=FALSE}
 library(dplyr)
 
-#df_by_day = group_by(df, date)
-df.StepsPerDay = summarise(group_by(df, date), total.steps=sum(steps, na.rm=TRUE))
-with(df.StepsPerDay, mean(total.steps, na.rm=TRUE))   #9354.23
-
+df.StepsPerDay <- summarise(group_by(df, date), total.steps=sum(steps, na.rm=TRUE))
 hist(df.StepsPerDay$total.steps, breaks=20, col="red", 
      xlab="Total Number of Steps Per Day",
      main="Frequencies of Total Number of Steps Per Day")
-
 ```
 
+A value of 20 breaks reveals regions which may 
+be skewing the data. If the rows with missing data had not been removed earlier, 
+then we would see a large spike in the frequency for zero steps. This spike 
+occurs even when the ```na.rm=TRUE``` option is used in the ```sum()``` and 
+```mean()``` functions. This is because ```sum()``` returns 0 if it is asked to 
+sum over a vector composed exclusively of NAs. So by the time the ```mean()``` 
+function is called, any values which should have been NAs are now zeroes, and 
+```mean()``` does not (and should not) filter out zeroes.
+
+A smaller number of breaks would hide the presence of such a problematic peak 
+from our view, due to the very small frequencies for steps higher than 0 but 
+less than 5000. 
+
+### Mean and median of total daily steps
+We can find out what the mean and median number of total daily steps is. 
+```{r}
+mean.dailySteps <- mean(df.StepsPerDay$total.steps, na.rm=TRUE)
+median.dailySteps <- median(df.StepsPerDay$total.steps, na.rm=TRUE)
+```
+
+```{r}
+mean.dailySteps
+median.dailySteps
+```
+
+We find that the mean number of total daily steps is 
+**`r round(mean.dailySteps, digits=2)`** and the median number of total daily steps 
+is **`r round(median.dailySteps, digits=2)`**. Both values are very close together, 
+meaning that both are good measures of centrality for this data.
 
 
 ## What is the average daily activity pattern?
