Report number of missing rows

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -166,9 +166,9 @@ summaries of the data.
 The total number of missing values in the dataset (i.e. the total number of 
 rows with NAs) is: 
 ```{r}
-complete.cases(df)
-
+sum(!df$complete)
 ```
+
 
 Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
